--- a/tex/config/tref.tex
+++ b/tex/config/tref.tex
@@ -14,3 +14,9 @@
 }
 
 \RequirePackage{cleveref}
+\hypersetup{
+    colorlinks,
+    linkcolor={black},
+    citecolor={blue!50!black},
+    urlcolor={blue!80!black}
+}
