--- a/tex/back/bibliography.bib
+++ b/tex/back/bibliography.bib
@@ -1,4 +1,18 @@
 %
+% general
+%
+
+@book{galaxy-formation,
+    author    = "Houjun Mo and Frank van den Bosch and Simon White",
+    title     = "Galaxy Formation and Evolution",
+    year      = "2010",
+    publisher = "Cambridge University Press",
+}
+
+
+
+
+%
 % chapter 5
 %
 
@@ -47,4 +61,14 @@
    year={1997},
    month={Dec},
    pages={577–591}
+}
+
+% quasar absorption lines
+@misc{becker2015reionization,
+    title={Reionization and high-redshift galaxies: the view from quasar absorption lines},
+    author={George D. Becker and James S. Bolton and Adam Lidz},
+    year={2015},
+    eprint={1510.03368},
+    archivePrefix={arXiv},
+    primaryClass={astro-ph.CO}
 }
