--- a/tex/main/01-introduction.tex
+++ b/tex/main/01-introduction.tex
@@ -91,7 +91,7 @@ Astrophysical units are uniquely used in Astrophysics. In order to talk of the m
 \end{marginfigure}
 In order to get a feeling for scales, some mass, distance and time scales are listed in \cref{tab:units}
 
-\begin{table}
+\begin{table*}
 \label{table:scales}
 \centering
 \begin{tabular}{lll}
@@ -106,7 +106,7 @@ Galaxy clusters $\approx 10^{15}$ $M_\odot$ & Observable Universe $\approx 10^9$
 \end{tabular}
 \caption{Astrophysical scales.}
 \label{tab:units}
-\end{table}
+\end{table*}
 
 To talk about stars and other bright objects in the universe we need a way to talk about the luminosity, flux and the magnitude of these objects. The intrinsic luminosity is defined as $L = \text{energy}/\text{time}$, whereas the flux at the observer is defined as the luminosity divided by the area, $F = L/4\pi r^2$, where $r$ is the distance between object and observer.
 
