--- a/tex/main/05-baryonic-structures.tex
+++ b/tex/main/05-baryonic-structures.tex
@@ -17,7 +17,7 @@ Following this, the baryons continue to participate in structure formation, driv
 
 
 \subsection{Phases}
-\begin{itemize}
+\begin{itemize}[nolistsep]
 	\item Gas
 	\begin{itemize}
 		\item Hot gas (ionized)
@@ -210,11 +210,11 @@ The rotational velocities are comparatively small.
 
 
 \subsection{Scaling relations}
-\begin{figure}
-	\includegraphics[width=0.7\textwidth]{img/ch-05/fundamental-plane.png}
+\begin{marginfigure}
+	\includegraphics[width=\textwidth]{img/ch-05/fundamental-plane.png}
 	\caption{The fundamental plane for elliptical galaxies, from \cite{Magoulas:2012jy}. The view is chosen such that the plane is seen edge-on as a line.}
 	\label{fig:fundamental-plane}
-\end{figure}
+\end{marginfigure}
 There is a correlation between some of the main characteristics of ellipticals.
 Let $\sigma$ be the line of sight velocity dispersion of stars inside the half-light radius $R_e$,
 and let $\avg{I}_l$ be the main surface brightness within $R_e$.
@@ -467,15 +467,18 @@ We thus see absorption lines at wavelengths $\lambda_\mathrm{α} (1 + z_i)$.
 
 \begin{figure}
 	\includegraphics[width=0.7\textwidth]{img/ch-05/quasar-spectrum.pdf}
-	\caption{A spectrum of the quasar ULAS J1319+0950 at $z=6.13$ from \cite{becker2015reionization}, obtained with the X-Shooter spectrograph on the Very Large Telescope (VLT)}
+	\caption{A spectrum of the quasar ULAS J1319+0950 at $z=6.13$ from \cite{becker2015reionization}, obtained with the X-Shooter spectrograph on the Very Large Telescope (VLT). 
+	Many neutral hydrogen clouds with low density cause the presence of the Ly-α forest in the spectrum. 
+	The Gunn-Peterson trough indicates the continuous presence of dense neutral hydrogen in the universe, and is therefore only visible before reionization at $z=6$.}
 	\label{fig:quasar-spectrum}
 \end{figure}
 
-The spectrum of a quasar is shown in \cref{fi:quasar-spectrum}.
+The spectrum of a quasar is shown in \cref{fig:quasar-spectrum}.
 The central peak is the Ly-α emission of the quasar itself, which is redshifted to around \SI{5400}{\angstrom}, indicating $z_q \approx 3.5$.
 On the left side, there are many absorption lines, corresponding to Ly-α absorption at different redshifts.
 There are also a few absorption lines on the right from metals.
 
+These Ly-α absorption systems can not only be used to find the location and clustering of neutral hydrogen in the universe from the redshift, but also their density from the strength of the absorption.
 We distinguish different types of absorption systems:
 \begin{itemize}
 	\item The \textbf{Ly-α forest} consists of many thin absorption lines,
@@ -484,75 +487,48 @@ We distinguish different types of absorption systems:
 	which absorb the quasar light completely at the Ly-α wavelength.
 \end{itemize}
 
-Lyman $\alpha$ absorption line systems can be counted to derive density of neutral hydrogen in the universe
+Ly-α absorption line systems can be used to derive the density of neutral hydrogen at different redshifts, which gives us information about the epoch of reionization.
 
-find : about \SI{50}{\percent} of baryons are in the form of neutral hydrogen at $z=3$
+Remember that at redshift $1100$, protons and electrons combined to form neutral particles, such as neutral hydrogen.
+After recombination, the universe remained mostly neutral for a while, until the first stars reionized the hydrogen at $z \approx 6$.
+Studies of quasar absorption provide a way to find the start of reionization, since large number densities of neutral hydrogen are dominant only in the timespan after recombination, but before reionization.
+These Damped Ly-α systems completely absorb the light of quasars along the line of sight.
+This strong absorption is called the \emph{Gunn-Peterson trough}, and can only be observed for quasars with redshift larger than $6$, which puts the epoch of reionization at that point.
 
-$\rightarrow$ universe was already mostly reionized by then
-
-Recall: reionization: baryons were mostly neutral after recombination $(z=1100)$ but were reionized by first astrophysical objects (Stars, galaxies, etc)
-
-
-If universe was still neutral at $z=z_{q}$, quasar continuum would be fully absorbed at $\lambda < \lambda_{\alpha} \left(1+z_{9}\right) $.
-
-$\rightarrow$ Can set limit on epoch of reionization: Gunn-Peterson Effect
-
-$\rightarrow$ Find that reionization must have been completed by $z \sim 6$
+At $z \approx 3$, we find that only about half of the baryons are still neutral, which means that about half of them are already ionized.
+This marks the point at which the reionization of the universe was already mostly completed.
 
 
 
 
 
 \section{Cosmic star formation}
-Consider the global rate of star formation:
-\begin{align*}
-	\dot{\rho}_\star(z)
-	= \frac{\text {total gas mass turned into star at redshift } z}{\text{time } \times \text { volume}}
-\end{align*}
-
-It can be estimated:
-
-Let $\avg{\dot{M}_\star}(L,z)$ be the star formation rate for galaxies with luminosity $L$ at redshift $z$.
-
-Then
+\begin{figure}
+	\includegraphics[width=0.7\textwidth]{img/ch-05/star-formation-rate.pdf}
+	\caption{The global star formation rate as a function of redshift, from \cite{galaxy-formation}. We see that the star formation rate was mostly constant at redshifts earlier than $2$, but then dropped quickly until today.}
+	\label{fig:star-formation-rate}
+\end{figure}
+We want to calculate the global rate of star formation $\dot{\rho}_\star(z)$, which is total gas mass turned into stars at redshift $z$ per unit time and volume. It can be estimated as
 \begin{align*}
 	\dot{\rho}_\star(z)
 	&= \int   \avg{\dot{M}_\star}(L, z) \phi(L, z) \dd{L},
 \end{align*}
-where $\phi(L, z)$ is the galaxy luminosity function, which is the number of galaxies formed per volume and luminosity.
+where
+\begin{itemize}
+	\item $\avg{\dot{M}_\star}(L,z)$ is the star formation rate for galaxies with luminosity $L$ at redshift $z$, and
+	\item $\phi(L, z)$ is the galaxy luminosity function, which is the number of galaxies formed per volume and luminosity.
+\end{itemize}
 
-\Cref{fig:star-formation-rate} shows that $\dot{\rho}_\star$ has dropped since $z \approx 2$
-
-\begin{figure}
-	\includegraphics[width=0.7\textwidth]{img/ch-05/star-formation-rate.pdf}
-	\caption{The global star formation rate as a function of redshift, from \cite{galaxy-formation}. Different symbols correspond to different rest-frame wavelength ranges used to infer the star-formation rate, as indicated.}
-	\label{fig:star-formation-rate}
-\end{figure}
-
-
+\Cref{fig:star-formation-rate} shows that the global star formation rate has dropped since $z \approx 2$.
 
 \section{Modelling galaxy formation}
-
-How can we model baryonic structure formation and galaxy formation in particular?
-
-How can one account for the diversity and statistical properties of galaxies?
-
-$\rightarrow$ Describe basic framework for galaxy formation models
-
-Still an unsolved problem.
-There are many interlinked processes.
-
-
-Cosmological model:
-\begin{itemize}
-	\item Background expansion
-	\item Linear structure evolution
-	\item Non-linear structure formation (DM halos)
+In this section, we describe a basic framework for galaxy formation models, which should answer several questions:
+\begin{itemize}[nolistsep]
+	\item How can we model baryonic structure formation, and galaxy formation in particular?
+	\item How can we account for the diversity and statistical properties of galaxies?
 \end{itemize}
-$\rightarrow$ Add treatment of baryons
-
-
-
+This is still an unsolved problem, and involves many interlinked processes.
+To our cosmological model, which describes background expansion and the evolution of dark matter, we add the treatment of baryons.
 
 \subsection{Gas cooling}
 Gas can cool through different processes:
@@ -585,63 +561,52 @@ Star formation can be quiescent (in gas disks) or starburst (with accumulation o
 
 
 \subsection{Feedback}
-
-Feedback processes inject energy, mass or metals into the gas.
-Feedback processes include
-\begin{itemize}
-	\item Supernovae explosions at the end of stellar evolution
-	\item \Ac{smbh} in \ac{agn}
-\end{itemize}
-
-These processes can reheat cold gas and thus suppress star formation (negative feedback) or compress surrounding gas with shock waves and thus enhance star formation (positive feedback).
-
 \begin{figure}
 	\includegraphics[width=0.8\textwidth]{img/ch-05/feedback.pdf}
 	\caption{A flowchart of the evolution of an individual galaxy, from \cite{galaxy-formation}. The galaxy is represented by the dashed box which contains hot gas, cold gas, stars and a supermassive black hole (SMBH). Gas cooling converts hot gas into cold gas, star formation converts cold gas into stars, and dying stars inject energy, metals and gas into the gas components. In addition, the SMBH can accrete gas (both hot and cold) as well as stars, producing AGN activity which can release vast amounts of energy which affect primarily the gaseous components of the galaxy. Note that in general the box will not be closed: gas can be added to the system through accretion from the intergalactic medium and can escape the galaxy through outflows driven by feedback from the stars and/or the SMBH. Finally, a galaxy may merge or interact with another galaxy, causing a significant boost or suppression of all these processes.}
 	\label{fig:feedback}
 \end{figure}
-
+Feedback processes inject energy, mass and metals into the gas.
+Both supernova explosions at the end of stellar evolution and \ac{agn} can act as feedback processes.
+They can reheat cold gas and thus suppress star formation, which is called negative feedback, or compress surrounding gas with shock waves and thus enhance star formation, which is called positive feedback.
 \Cref{fig:feedback} shows the feedback processes that can occur in a galaxy.
-
-Galaxy formation is very complex and involves many intertwined processes.
-Inflow and outflow of gas from and to the \ac{igm} also take place.
-
 
 \subsection{Mergers}
 
-Baryons are also effected by mergers, represented by merger trees.
+Baryons are also effected by mergers. Depending on the masses of the merging haloes, different effects occur.
 
-\begin{itemize}
-	\item If two halos of similar masses merge, violent relaxation quickly lead to a relaxed state for the new halo. Hot gas from the progenitors is shock-heated and settles into hydrostatic equilibrium with the DM halo potential. Central galaxies (if present) merge to a new central galaxy (likely Elliptical)
-	\item If merging haloes have very different mass, the smaller halo orbits within main halo as a satellite until dynamical friction (kinetic energy is transferred from small to large object, making the small object sink towards the large one) and tidal effects dissolves it.
-	\item In the limit of very small haloes merging into large halo, the accretion can be thought of as smooth accretion
-\end{itemize}
+If two halos of similar masses merge, violent relaxation quickly leads to a relaxed state for the new halo.
+Hot gas from the progenitors is shock-heated and settles into hydrostatic equilibrium with the \ac{dm} halo potential.
+Central galaxies, if present, merge to a new central galaxy, which is likely an elliptical galaxy.
+
+If merging haloes have very different masses, the smaller halo orbits the main halo as a satellite until dynamical friction\sidenote{(Kinetic energy is transferred from a small object to a large object, making the small object sink towards the large one as it loses energy)} and tidal effects dissolve it.
+
+In the limit of very small haloes merging into large halo, the accretion can be thought of as smooth accretion.
+
 
 \subsection{Dynamical evolution}
 
-As satellite galaxies orbit within dark matter halos, tidal interactions and pressure from the gas in the halo (ram pressure) can remove dark matter, gas and stars from the satellite.
+As satellite galaxies orbit within dark matter halos, tidal interactions and pressure from the gas in the halo, called \emph{ram pressure}, can remove dark matter, gas and stars from the satellite.
 These effects drive galaxy evolution in groups and clusters of galaxies and play a role in the environment dependence of galaxy properties.
 
 Internal instabilities can also affect galaxy morphologies. 
-In particular, a bar instability may develop in spiral galaxies which can then buckle to create a pseudo-bulge. 
-Bulges may therefore be remnants of early stages of galaxy formation or results from buckling of a bar.
+In particular, a bar instabilities may develop in spiral galaxies, which can then buckle to create a pseudo-bulge. 
+Bulges may therefore be remnants of either early stages of galaxy formation, or results from the buckling of a bar.
 
 \subsection{Chemical evolution}
 
-Heavy elements (metals) are produced in stars and expelled by supernovae explosions and stellar winds into the \ac{ism}.
+Heavy elements (metals) are produced in stars and expelled by supernovae explosions and stellar winds into the \ac{ism}. This has important implications for the evolution of the galaxy:
 
-Importance for galaxy evolution:
 \begin{itemize}
-	\item Cooling efficiency depends strongly on metallicity (cooling more efficient for metal-enriched gas).
-	\item Metallicity affects color and luminosity of stellar population in galaxies.
-	\item Small particles of heavy elements called dust can absorb starlight and reradiate it in the IR (extinction).
+	\item The cooling efficiency depends strongly on the metallicity, as cooling is more efficient for metal-enriched gas.
+	\item Metallicity affects colour and luminosity of stellar population in galaxies.
+	\item Small particles of heavy elements, called dust, can absorb starlight and reradiate it in the IR.
+	This effect leads to \emph{extinction}, which makes all objects behind dust appear redder and dimmer than otherwise expected.
 \end{itemize}
 
 
 \subsection{Stellar population synthesis}
-The spectrum of galaxies is mostly a combination of the spectra of many stars. Given the star formation rate $\dot{M}_{*}(z)$ and the Initial Mass Function (IMF), the stellar population can be evolved using stellar evolution to derive a stellar synthesis spectrum.
-
-The effect of gas emission and absorption, dust extinction and AGN emission also need to be modelled.
+The spectrum of galaxies is mostly a combination of the spectra of many stars. Given the star formation rate $\dot{M}_{*}(z)$ and the \ac{imf}, the stellar population can be evolved using stellar evolution to derive a stellar synthesis spectrum. The effect of gas emission and absorption, dust extinction, and \ac{agn} emission also need to be modelled.
 
 
 \subsection{Intergalactic Medium}
