Fix merging problems

--- a/tex/main/02-background.tex
+++ b/tex/main/02-background.tex
@@ -466,7 +466,7 @@ The last term can be simplified. Because $p = p_0 a^{-1}$, $\dv*{p}{t} = -p_0 a^
 \end{align*}
 In the last line, we used partial integration.\sidenote{In detail:
 \begin{align*}
-	\int \dd{^3p p \pdv{f_i}{p}}
+	\int \dd{^3p} p \pdv{f_i}{p}
 	&= \int \dd{p} p^3 \pdv{f_i}{p}\\
 	&= - \int \dd{p} \pdv{p^3}{p} f_i \\
 	&= -3 n_i
@@ -682,7 +682,8 @@ Baryons from the Big Bang nucleosynthesis contribute $\Omega_b \approx 0.05$. Th
 \end{itemize}
 
 \subsection*{Dark Matter}
-Dark Matter contributes $\Omega_\text{dm} \approx 0.25$. We know of its existence through its gravitational effects. There is evidence for dark matter in galaxies, galaxy clusters, large scale structure, and many others.
+\newacronym{dm}{DM}{dark matter}
+\Ac{dm} contributes $\Omega_\text{dm} \approx 0.25$. We know of its existence through its gravitational effects. There is evidence for dark matter in galaxies, galaxy clusters, large scale structure, and many others.
 
 Dark matter is mostly non-baryonic, because baryons are constrained to $\Omega_b \approx 0.05$ by Big Bang nucleosynthesis. Also, the structure formation constraints below rule out baryons as dark matter candidates.
 \begin{itemize}
