--- a/tex/main/03-linear-perturbations.tex
+++ b/tex/main/03-linear-perturbations.tex
@@ -222,7 +222,7 @@ with the comoving number density $n(\vec{x}, t) = \int \dd{^3p} f(\vec{x}, \vec{
 	\item The bulk velocity $\langle v_i \rangle$ can be obtained with $Q = v_i = p_i/(m n)$
 \end{itemize}
 
-We take moments of the Boltzmann equation. One can show\sidenote{For more details, have a look at \cref{ssec:jeans-equation}.} that one gets the same equations as the fluid equations: the continuity equation and the Euler equation, with the pressure gradient term replaced as follows:
+We take moments of the Boltzmann equation. One can show\sidenote{For more details, have a look at \cref{ssec:collisionless-eom}.} that one gets the same equations as the fluid equations: the continuity equation and the Euler equation, with the pressure gradient term replaced as follows:
 \begin{align*}
 	\frac{\Grad_i p}{\rho}
 	\to \sum_{j=1}^3 \pdv{}{x_j}
