--- a/tex/main/05-baryonic-structures.tex
+++ b/tex/main/05-baryonic-structures.tex
@@ -480,7 +480,7 @@ The continuum light of the quasar is absorbed by the clouds, particularly by the
 We thus see absorption lines at wavelengths $\lambda_\mathrm{α} (1 + z_i)$.
 
 \begin{figure}
-	\includegraphics[width=0.7\textwidth]{img/ch-05/quasar-spectrum.pdf}
+	\includegraphics[width=\textwidth]{img/ch-05/quasar-spectrum.pdf}
 	\caption{A spectrum of the quasar ULAS J1319+0950 at $z=6.13$ from \cite{becker2015reionization}, obtained with the X-Shooter spectrograph on the Very Large Telescope (VLT). 
 	Many neutral hydrogen clouds with low density cause the presence of the Ly-α forest in the spectrum. 
 	The Gunn-Peterson trough indicates the continuous presence of dense neutral hydrogen in the universe, and is therefore only visible before reionization at $z=6$.}
